toolchain/logging/elk/apm-server/production/eck-apm-prod-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: es
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/affinity: cookie
    ## resolve 502 BadGateway when using XPACK
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '180'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '180'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '180'
  name: eck-apm
  namespace: eck
spec:
  rules:
  - host: apm.bobobox.co.id
    http:
      paths:
      - backend:
          serviceName: eck-apm-http
          servicePort: 8200
        path: /
  tls:
  - hosts:
    - apm.bobobox.co.id
    secretName: apm-tls
